# TITask

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
alembic/: alembic.ini  env.py
alembic/versions/: 2025_08_16_2055-5d23185707bf_init_schema.py  2025_08_16_2101-9eeff939ad5a_seed_users.py
app/: file_validator.py  main.py
app/api/: auth.py  comments.py  files.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/schemas/: auth.py  comment.py  file.py  user.py
app/validators/: base.py  constants.py  file_validator.py  handlers.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html
tests/: conftest.py  test_auth.py  test_comments.py  test_files.py  test_handlers_bad_cases.py  test_handlers_good_cases.py
uploads/: invalid.csv  invalid.xlsx  valid.csv  valid.xlsx
