[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-validator"
version = "0.1.0"
description = "File validation FastAPI app"
authors = [{ name = "My Name", email = "my_name@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "sqlalchemy==2.0.30",
  "alembic==1.13.1",
  "passlib[bcrypt]==1.7.4",
  "bcrypt<4.0.0",
  "python-jose[cryptography]==3.3.0",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "email-validator==2.1.1",
  "python-multipart==0.0.9",
  "pandas==2.2.2",
  "openpyxl==3.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.1",
  "pytest-asyncio==0.23.6",
  "httpx==0.27.0",
  "ruff==0.4.3",
  "pytest-cov==5.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "frontend*", "tests*"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I"]
